# tenor

./: .gitignore  Cargo.toml  boot.sh  boot_sim.sh  build_fpga.sh  crab.sh  image.sh  load_orange.sh  prog_fpga.sh  rust-toolchain.toml
.cargo/: config.toml
fpga/: bpu.py  dma_test copy.py  dma_test.py  eucalyptus.py  eucalyptus_platform.py  orangecrab.py  sim_run.py  sim_soc.py  tmu.py
fpga/lambda/: bpu.py  i2c.py  lambda.py  mipi.py
litex-pac/: Cargo.toml  device.x  update.sh
litex-pac/src/: analyzer.rs  bpu.rs  ctrl.rs  dma.rs  dmatest.rs  ethphy.rs  identifier_mem.rs  interrupt.rs  lib.rs  sim_finish.rs  sim_marker.rs  sim_trace.rs  timer1.rs  uart.rs
litex-pac/src/analyzer/: mux_value.rs  storage_done.rs  storage_enable.rs  storage_length.rs  storage_mem_data.rs  storage_mem_level.rs  storage_offset.rs  subsampler_value.rs  trigger_done.rs  trigger_enable.rs  trigger_mem_full.rs  trigger_mem_mask0.rs  trigger_mem_mask1.rs  trigger_mem_mask2.rs  trigger_mem_mask3.rs  trigger_mem_mask4.rs  trigger_mem_mask5.rs  trigger_mem_mask6.rs  trigger_mem_value0.rs  trigger_mem_value1.rs  trigger_mem_value2.rs  trigger_mem_value3.rs  trigger_mem_value4.rs  trigger_mem_value5.rs  trigger_mem_value6.rs  trigger_mem_write.rs
litex-pac/svd/: soc.svd
src/: banner.txt  bpu.rs  dma_test.rs  driver.rs  interrupt.rs  main.rs  task.rs  time.rs  timer.rs  tmu.rs  trap.rs  uart.rs  uart_log.rs  util.rs
src/asm/: boot.S  trap.S
src/lds/: litex-sim.ld
src/task/: context.rs  manager.rs  mod.rs
src/thread/: context.rs  idle.rs  info.rs  mod.rs  scheduler.rs
(+55 files in other folders)
